feat: disabling for mode and adding argline