@@ -151,6 +151,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <forkMode>never</forkMode>
                     <excludes>
                         <exclude>**/*IntegrationTest.java</exclude>
                     </excludes>
